force-app/main/default/objects/ROSE_Conflict_Queue__c/ROSE_Conflict_Queue__c.object-meta.xml
<CustomObject>
    <label>Conflict Queue</label>
    <pluralLabel>Conflict Queue</pluralLabel>
    <nameField>
        <displayFormat>CQ-{00000}</displayFormat>
        <label>Conflict Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>