force-app/main/default/objects/ROSE_Conflict_Queue__c/fields/Device_Value__c.field-meta.xml
<CustomField>
    <fullName>Device_Value__c</fullName>
    <label>Device Value</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>