force-app/main/default/objects/ROSE_Conflict_Queue__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>