force-app/main/default/objects/ROSE_Conflict_Queue__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Server Wins</fullName>
            </value>
            <value>
                <fullName>Device Wins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>