force-app/main/default/objects/ROSE_Conflict_Queue__c/fields/Server_Modified__c.field-meta.xml
<CustomField>
    <fullName>Server_Modified__c</fullName>
    <label>Server Modified</label>
    <type>DateTime</type>
</CustomField>