force-app/main/default/objects/ROSE_Conflict_Queue__c/fields/Server_Value__c.field-meta.xml
<CustomField>
    <fullName>Server_Value__c</fullName>
    <label>Server Value</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>